drop push/pull from grid

--- a/test/visual/flexbox-grid.html
+++ b/test/visual/flexbox-grid.html
@@ -177,8 +177,8 @@
 
     <hr />
 
-    <h2>Offset, push, and pull resets</h2>
-    <p>Reset offsets, pushes, and pulls at specific breakpoints.</p>
+    <h2>Offset resets</h2>
+    <p>Reset offsets at specific breakpoints.</p>
     <div class="row">
         <div class="col-sm-5 col-md-6">.col-sm-5 .col-md-6</div>
         <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">.col-sm-5 .offset-sm-2 .col-md-6 .offset-md-0</div>
