re-add `.list-unstyled`

--- a/test/visual/list.html
+++ b/test/visual/list.html
@@ -63,6 +63,29 @@
     <li>List item</li>
 </ol>
 
+<h2>Unstyled</h2>
+<ul class="list-unstyled">
+    <li>List item</li>
+    <li>List item
+        <ul>
+            <li>Nested List item</li>
+            <li>Nested List item</li>
+        </ul>
+    </li>
+    <li>List item</li>
+</ul>
+
+<ul class="list-unstyled">
+    <li>List item</li>
+    <li>List item
+        <ul class="list-unstyled">
+            <li>Nested List item</li>
+            <li>Nested List item</li>
+        </ul>
+    </li>
+    <li>List item</li>
+</ul>
+
 <h2>Base <code>.list</code></h2>
 
 <ul class="list">
@@ -181,62 +204,6 @@
     <div class="list-item">List item</div>
     <div class="list-item">List item
         <div class="list list-ordered">
-            <div class="list-item">List item</div>
-            <div class="list-item">List item</div>
-        </div>
-    </div>
-    <div class="list-item">List item</div>
-</div>
-
-<h2>Unstyled</h2>
-<ol class="list">
-    <li class="list-item">List item</li>
-    <li class="list-item">List item
-        <ul>
-            <li>List item</li>
-            <li>List item</li>
-        </ul>
-    </li>
-    <li class="list-item">List item</li>
-</ol>
-
-<ol class="list">
-    <li class="list-item">List item</li>
-    <li class="list-item">List item
-        <ul class="list">
-            <li class="list-item">List item</li>
-            <li class="list-item">List item</li>
-        </ul>
-    </li>
-    <li class="list-item">List item</li>
-</ol>
-
-<ol class="list">
-    <li class="list-item">List item</li>
-    <li class="list-item">List item
-        <ol>
-            <li>List item</li>
-            <li>List item</li>
-        </ol>
-    </li>
-    <li class="list-item">List item</li>
-</ol>
-
-<ol class="list">
-    <li class="list-item">List item</li>
-    <li class="list-item">List item
-        <ol class="list">
-            <li class="list-item">List item</li>
-            <li class="list-item">List item</li>
-        </ol>
-    </li>
-    <li class="list-item">List item</li>
-</ol>
-
-<div class="list">
-    <div class="list-item">List item</div>
-    <div class="list-item">List item
-        <div class="list">
             <div class="list-item">List item</div>
             <div class="list-item">List item</div>
         </div>
