--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -291,13 +291,6 @@ Holder.addTheme("gray", {
     <li>List item</li>
 </ul>
 
-<h3>Inline list</h3>
-<ul class="list-inline">
-    <li class="list-inline-item">First item</li>
-    <li class="list-inline-item">Second item</li>
-    <li class="list-inline-item">Third item</li>
-</ul>
-
 <h3>Description list</h3>
 <dl>
     <dt>term item</dt>
@@ -1659,100 +1652,6 @@ Anchor variants:<br />
             <p>HTML5 video not supported</p>
         </video>
     </div>
-</div>
-
-<h3>List group</h3>
-<ul class="list-group">
-  <li class="list-group-item">Cras justo odio</li>
-  <li class="list-group-item">Dapibus ac facilisis in</li>
-  <li class="list-group-item">Morbi leo risus</li>
-  <li class="list-group-item">Porta ac consectetur ac</li>
-  <li class="list-group-item active">Vestibulum at eros</li>
-</ul>
-
-<h3>List group with badges</h3>
-<ul class="list-group">
-  <li class="list-group-item">
-    <span class="badge badge-pill float-end">14</span>
-    Cras justo odio
-  </li>
-  <li class="list-group-item">
-    <span class="badge badge-pill float-end">2</span>
-    Dapibus ac facilisis in
-  </li>
-  <li class="list-group-item">
-    <span class="badge badge-pill float-end">1</span>
-    Morbi leo risus
-  </li>
-</ul>
-
-<h3>Linked list group</h3>
-<div class="list-group">
-  <a href="#" class="list-group-item list-group-item-action active">
-    Cras justo odio
-  </a>
-  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
-  <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
-  <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
-  <a href="#" class="list-group-item list-group-item-action">Vestibulum at eros</a>
-</div>
-
-<h3>Button list group</h3>
-<div class="list-group">
-  <button type="button" class="list-group-item list-group-item-action active">
-    Cras justo odio
-  </button>
-  <button type="button" class="list-group-item list-group-item-action">Dapibus ac facilisis in</button>
-  <button type="button" class="list-group-item list-group-item-action">Morbi leo risus</button>
-  <button type="button" class="list-group-item list-group-item-action">Porta ac consectetur ac</button>
-  <button type="button" class="list-group-item list-group-item-action">Vestibulum at eros</button>
-</div>
-
-<h3>Disabled items in list group</h3>
-<div class="list-group">
-  <div class="list-group-item">Standard list group item</div>
-  <a href="#" class="list-group-item list-group-item-action">Actionable list group item</a>
-  <a href="#" class="list-group-item list-group-item-action disabled">Disabled list group item</a>
-</div>
-
-<h3>List group context</h3>
-<ul class="list-group">
-  <li class="list-group-item">Default list group item</li>
-  <li class="list-group-item list-group-item-primary">Primary list group item</li>
-  <li class="list-group-item list-group-item-secondary">Secondary list group item</li>
-  <li class="list-group-item list-group-item-success">Success list group item</li>
-  <li class="list-group-item list-group-item-info">Info list group item</li>
-  <li class="list-group-item list-group-item-warning">Warning list group item</li>
-  <li class="list-group-item list-group-item-danger">Danger list group item</li>
-  <li class="list-group-item list-group-item-light">Light list group item</li>
-  <li class="list-group-item list-group-item-dark">Dark list group item</li>
-</ul>
-<div class="list-group">
-  <a href="#" class="list-group-item list-group-item-action">Default list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-primary">Primary list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">Secondary list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-success">Success list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-info">Info list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-warning">Warning list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-danger">Danger list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-light">Light list group item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Dark list group item</a>
-</div>
-
-<h3>Custom list group</h3>
-<div class="list-group">
-  <a href="#" class="list-group-item list-group-item-action active">
-    <h4>List group item heading</h4>
-    <p>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-  </a>
-  <a href="#" class="list-group-item list-group-item-action">
-    <h4>List group item heading</h4>
-    <p>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-  </a>
-  <a href="#" class="list-group-item list-group-item-action disabled">
-    <h4>List group item heading</h4>
-    <p>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-  </a>
 </div>
 
 <h3>Button group</h3>
@@ -3382,10 +3281,10 @@ Anchor variants:<br />
         <h4 class="card-title">Card title</h4>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Vestibulum at eros</li>
+      <ul class="list list-spaced list-ruled mb-0">
+        <li class="list-item">Cras justo odio</li>
+        <li class="list-item">Dapibus ac facilisis in</li>
+        <li class="list-item">Vestibulum at eros</li>
       </ul>
       <div class="card-body">
         <a href="#" class="card-link">Card link</a>
@@ -3394,10 +3293,10 @@ Anchor variants:<br />
     </div>
 
     <div class="card">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Vestibulum at eros</li>
+      <ul class="list list-spaced list-divided">
+        <li class="list-item">Cras justo odio</li>
+        <li class="list-item">Dapibus ac facilisis in</li>
+        <li class="list-item">Vestibulum at eros</li>
       </ul>
     </div>
 
