Add list group variant

--- a/test/visual/list.html
+++ b/test/visual/list.html
@@ -323,6 +323,18 @@
     <li class="list-item">List item</li>
 </ul>
 
+<ul class="list list-horizontal list-bulleted">
+    <li class="list-item">List item</li>
+    <li class="list-item">List item</li>
+    <li class="list-item">List item</li>
+</ul>
+
+<ul class="list list-horizontal list-ordered">
+    <li class="list-item">List item</li>
+    <li class="list-item">List item</li>
+    <li class="list-item">List item</li>
+</ul>
+
 <ul class="list list-horizontal list-divided">
     <li class="list-item">List item</li>
     <li class="list-item">List item</li>
@@ -335,13 +347,7 @@
     <li class="list-item">List item</li>
 </ul>
 
-<ul class="list list-horizontal list-bulleted">
-    <li class="list-item">List item</li>
-    <li class="list-item">List item</li>
-    <li class="list-item">List item</li>
-</ul>
-
-<ul class="list list-horizontal list-ordered">
+<ul class="list list-horizontal list-group">
     <li class="list-item">List item</li>
     <li class="list-item">List item</li>
     <li class="list-item">List item</li>
@@ -360,12 +366,10 @@
     <li class="list-item">List item</li>
 </ul>
 
-<div class="card">
-    <div class="list list-spaced list-divided">
-        <div class="list-item">List item</div>
-        <div class="list-item">List item</div>
-        <div class="list-item">List item</div>
-    </div>
+<div class="list list-spaced list-group">
+    <div class="list-item">List item</div>
+    <div class="list-item">List item</div>
+    <div class="list-item">List item</div>
 </div>
 
 <ul class="list list-horizontal list-spaced-x list-divided">
@@ -375,6 +379,12 @@
 </ul>
 
 <ul class="list list-horizontal list-spaced-x list-ruled">
+    <li class="list-item">List item</li>
+    <li class="list-item">List item</li>
+    <li class="list-item">List item</li>
+</ul>
+
+<ul class="list list-horizontal list-spaced-x list-group">
     <li class="list-item">List item</li>
     <li class="list-item">List item</li>
     <li class="list-item">List item</li>
@@ -413,51 +423,47 @@
   </div>
 </div>
 
-<div class="card">
-    <div class="list list-divided list-spaced">
-      <div class="list-item d-flex flex-between flex-items-center">
-        Cras justo odio
-        <span class="badge">14</span>
-      </div>
-      <div class="list-item d-flex flex-between flex-items-center">
-        Dapibus ac facilisis in
-        <span class="badge">2</span>
-      </div>
-      <div class="list-item d-flex flex-between flex-items-center">
-        Morbi leo risus
-        <span class="badge">1</span>
-      </div>
-    </div>
+<div class="list list-group list-spaced">
+  <div class="list-item d-flex flex-between flex-items-center">
+    Cras justo odio
+    <span class="badge">14</span>
+  </div>
+  <div class="list-item d-flex flex-between flex-items-center">
+    Dapibus ac facilisis in
+    <span class="badge">2</span>
+  </div>
+  <div class="list-item d-flex flex-between flex-items-center">
+    Morbi leo risus
+    <span class="badge">1</span>
+  </div>
 </div>
 
 <h2>Content: Custom</h2>
-<div class="card" style="max-width: 25rem;">
-    <div class="list list-divided list-spaced">
-      <a href="#" class="list-item list-item-action flex-column flex-start active">
-        <div class="d-flex w-100 flex-between">
-          <h5>List group item heading</h5>
-          <small>3 days ago</small>
-        </div>
-        <p class="mb-0_25">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-        <small>Donec id elit non mi porta.</small>
-      </a>
-      <a href="#" class="list-item list-item-action flex-column flex-start">
-        <div class="d-flex w-100 flex-between">
-          <h5>List group item heading</h5>
-          <small class="text-muted">3 days ago</small>
-        </div>
-        <p class="mb-0_25">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-        <small class="text-muted">Donec id elit non mi porta.</small>
-      </a>
-      <a href="#" class="list-item list-item-action flex-column flex-start">
-        <div class="d-flex w-100 flex-between">
-          <h5>List group item heading</h5>
-          <small class="text-muted">3 days ago</small>
-        </div>
-        <p class="mb-0_25">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-        <small class="text-muted">Donec id elit non mi porta.</small>
-      </a>
+<div class="list list-spaced list-group" style="max-width: 25rem;">
+  <a href="#" class="list-item list-item-action flex-column flex-start active">
+    <div class="d-flex w-100 flex-between">
+      <h5>List group item heading</h5>
+      <small>3 days ago</small>
     </div>
+    <p class="mb-0_25">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small>Donec id elit non mi porta.</small>
+  </a>
+  <a href="#" class="list-item list-item-action flex-column flex-start">
+    <div class="d-flex w-100 flex-between">
+      <h5>List group item heading</h5>
+      <small class="text-muted">3 days ago</small>
+    </div>
+    <p class="mb-0_25">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small class="text-muted">Donec id elit non mi porta.</small>
+  </a>
+  <a href="#" class="list-item list-item-action flex-column flex-start">
+    <div class="d-flex w-100 flex-between">
+      <h5>List group item heading</h5>
+      <small class="text-muted">3 days ago</small>
+    </div>
+    <p class="mb-0_25">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small class="text-muted">Donec id elit non mi porta.</small>
+  </a>
 </div>
 
 <h2>Color Variants</h2>
@@ -484,6 +490,7 @@
     <li class="list-item list-item-dark">Dark list item</li>
 </ul>
 
+<h2>Color Context</h2>
 <div class="list list-spaced list-ruled">
     <a href="#" class="list-item list-item-action">Default list item</a>
     <a href="#" class="list-item list-item-action list-item-primary">Primary list item</a>
@@ -495,6 +502,18 @@
     <a href="#" class="list-item list-item-action list-item-dark">Dark list item</a>
 </div>
 
+<div class="list list-spaced list-group">
+    <a href="#" class="list-item list-item-action">Default list item</a>
+    <a href="#" class="list-item list-item-action list-item-primary">Primary list item</a>
+    <a href="#" class="list-item list-item-action list-item-success">Success list item</a>
+    <a href="#" class="list-item list-item-action list-item-info">Info list item</a>
+    <a href="#" class="list-item list-item-action list-item-warning">Warning list item</a>
+    <a href="#" class="list-item list-item-action list-item-danger">Danger list item</a>
+    <a href="#" class="list-item list-item-action list-item-list">Light list item</a>
+    <a href="#" class="list-item list-item-action list-item-dark">Dark list item</a>
+</div>
+
+<h2>Color Context: Active</h2>
 <div class="list list-spaced list-ruled">
     <a href="#" class="list-item list-item-action active">Default list item</a>
     <a href="#" class="list-item list-item-action list-item-primary active">Primary list item</a>
@@ -505,6 +524,18 @@
     <a href="#" class="list-item list-item-action list-item-light active">Light list item</a>
     <a href="#" class="list-item list-item-action list-item-dark active">Dark list item</a>
 </div>
+
+<div class="list list-spaced list-group">
+    <a href="#" class="list-item list-item-action active">Default list item</a>
+    <a href="#" class="list-item list-item-action list-item-primary active">Primary list item</a>
+    <a href="#" class="list-item list-item-action list-item-success active">Success list item</a>
+    <a href="#" class="list-item list-item-action list-item-info active">Info list item</a>
+    <a href="#" class="list-item list-item-action list-item-warning active">Warning list item</a>
+    <a href="#" class="list-item list-item-action list-item-danger active">Danger list item</a>
+    <a href="#" class="list-item list-item-action list-item-light active">Light list item</a>
+    <a href="#" class="list-item list-item-action list-item-dark active">Dark list item</a>
+</div>
+
 
 </div>
 
