--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -397,8 +397,8 @@ Showing a <kbd>kdb sample</kbd>
 </tbody>
 </table>
 
-<h3>Inverse Table</h3>
-<table class="table table-inverse">
+<h3>Striped Table</h3>
+<table class="table table-striped-dark">
 <thead>
     <tr>
       <th>#</th>
@@ -428,8 +428,7 @@ Showing a <kbd>kdb sample</kbd>
 </tbody>
 </table>
 
-<h3>Striped Table</h3>
-<table class="table table-striped">
+<table class="table bg-dark border-light text-white table-striped-light">
 <thead>
     <tr>
       <th>#</th>
@@ -491,7 +490,37 @@ Showing a <kbd>kdb sample</kbd>
 </table>
 
 <h3>Hoverable Table</h3>
-<table class="table table-striped table-hover">
+<table class="table table-striped-dark table-hover-dark">
+<thead>
+    <tr>
+      <th>#</th>
+      <th>Table Header 1</th>
+      <th>Table Header 2</th>
+      <th>Table Header 3</th>
+    </tr>
+</thead>
+<tbody>
+    <tr>
+        <th scope="row">1</th>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+    </tr>
+    <tr>
+        <th scope="row">2</th>
+        <td colspan="2">table cell</td>
+        <td>table cell</td>
+    </tr>
+    <tr>
+        <th scope="row">3</th>
+        <td>table cell</td>
+        <td>table cell</td>
+        <td>table cell</td>
+    </tr>
+</tbody>
+</table>
+
+<table class="table bg-dark border-light text-white table-striped-light table-hover-light">
 <thead>
     <tr>
       <th>#</th>
@@ -552,154 +581,120 @@ Showing a <kbd>kdb sample</kbd>
 </tbody>
 </table>
 
-<h3>Table head options</h3>
-<table class="table">
-<thead class="thead-inverse">
-    <tr>
-      <th>#</th>
-      <th>Table Header 1</th>
-      <th>Table Header 2</th>
-      <th>Table Header 3</th>
-    </tr>
-</thead>
-<tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-    </tr>
-</tbody>
-</table>
-
-<table class="table">
-<thead class="thead-default">
-    <tr>
-      <th>#</th>
-      <th>Table Header 1</th>
-      <th>Table Header 2</th>
-      <th>Table Header 3</th>
-    </tr>
-</thead>
-<tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-    </tr>
-</tbody>
-</table>
 
 <h3>Scrolling Table</h3>
-<table class="table table-scroll text-nowrap">
-<thead>
-    <tr>
-      <th>#</th>
-      <th>Table Header 1</th>
-      <th>Table Header 2</th>
-      <th>Table Header 3</th>
-      <th>Table Header 4</th>
-      <th>Table Header 5</th>
-      <th>Table Header 6</th>
-      <th>Table Header 7</th>
-      <th>Table Header 8</th>
-      <th>Table Header 9</th>
-    </tr>
-</thead>
-<tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td colspan="2">table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-    </tr>
-</tbody>
-</table>
+<div class="table-scroll">
+  <table class="table text-nowrap">
+  <thead>
+      <tr>
+        <th>#</th>
+        <th>Table Header 1</th>
+        <th>Table Header 2</th>
+        <th>Table Header 3</th>
+        <th>Table Header 4</th>
+        <th>Table Header 5</th>
+        <th>Table Header 6</th>
+        <th>Table Header 7</th>
+        <th>Table Header 8</th>
+        <th>Table Header 9</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <th scope="row">1</th>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+      </tr>
+      <tr>
+          <th scope="row">2</th>
+          <td colspan="2">table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+      </tr>
+      <tr>
+          <th scope="row">3</th>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+      </tr>
+  </tbody>
+  </table>
+</div>
 
 <h3>Bordered scrolling table</h3>
-<table class="table table-scroll table-bordered text-nowrap">
-<thead>
-    <tr>
-      <th>#</th>
-      <th>Table Header 1</th>
-      <th>Table Header 2</th>
-      <th>Table Header 3</th>
-      <th>Table Header 4</th>
-      <th>Table Header 5</th>
-      <th>Table Header 6</th>
-      <th>Table Header 7</th>
-      <th>Table Header 8</th>
-      <th>Table Header 9</th>
-    </tr>
-</thead>
-<tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td colspan="2">table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-        <td>table cell</td>
-    </tr>
-</tbody>
-</table>
+<div class="table-scroll">
+  <table class="table table-bordered text-nowrap">
+  <thead>
+      <tr>
+        <th>#</th>
+        <th>Table Header 1</th>
+        <th>Table Header 2</th>
+        <th>Table Header 3</th>
+        <th>Table Header 4</th>
+        <th>Table Header 5</th>
+        <th>Table Header 6</th>
+        <th>Table Header 7</th>
+        <th>Table Header 8</th>
+        <th>Table Header 9</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <th scope="row">1</th>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+      </tr>
+      <tr>
+          <th scope="row">2</th>
+          <td colspan="2">table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+      </tr>
+      <tr>
+          <th scope="row">3</th>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+          <td>table cell</td>
+      </tr>
+  </tbody>
+  </table>
+</div>
 
 <h3>Contextual table</h3>
 <table class="table table-bordered">
@@ -776,6 +771,29 @@ Showing a <kbd>kdb sample</kbd>
         <td>Hidden</td>
     </tr>
     </tbody>
+</table>
+
+<h3>Nested Table</h3>
+<table class="table table-striped">
+  <tbody>
+    <tr>
+      <td>
+        Row One
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <table>
+          <tr>
+            <td> Inner Table Row One: Styled with parent table style</td>
+          </tr>
+          <tr>
+            <td> Inner Table Rwo Two </td>
+          </td>
+        </table>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <h3>Default Form</h3>
@@ -1615,7 +1633,7 @@ Anchor variants:<br />
     <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 
-<h3>Stripped Progress bars</h3>
+<h3>Striped Progress bars</h3>
 <div class="progress mb-1">
     <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
