More table tweaks
- Drop light/dark from `.table-hover` and .`table-striped` as they can be confused with context color.
- Note about unsupported nested tables
- Some table doc reorder

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -398,7 +398,7 @@ Showing a <kbd>kdb sample</kbd>
 </table>
 
 <h3>Striped Table</h3>
-<table class="table table-striped-dark">
+<table class="table table-striped">
 <thead>
     <tr>
       <th>#</th>
@@ -428,7 +428,7 @@ Showing a <kbd>kdb sample</kbd>
 </tbody>
 </table>
 
-<table class="table bg-dark border-light text-white table-striped-light">
+<table class="table bg-dark border-light text-white table-striped-alt">
 <thead>
     <tr>
       <th>#</th>
@@ -490,7 +490,7 @@ Showing a <kbd>kdb sample</kbd>
 </table>
 
 <h3>Hoverable Table</h3>
-<table class="table table-striped-dark table-hover-dark">
+<table class="table table-striped table-hover">
 <thead>
     <tr>
       <th>#</th>
@@ -520,7 +520,7 @@ Showing a <kbd>kdb sample</kbd>
 </tbody>
 </table>
 
-<table class="table bg-dark border-light text-white table-striped-light table-hover-light">
+<table class="table bg-dark border-light text-white table-striped-alt table-hover-alt">
 <thead>
     <tr>
       <th>#</th>
