--- a/test/visual/table.html
+++ b/test/visual/table.html
@@ -330,7 +330,7 @@
 </table>
 
 <h2>Striped</h2>
-<table class="table table-striped-dark">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>#</th>
@@ -368,7 +368,7 @@
     </tfoot>
 </table>
 
-<table class="table table-striped-light bg-dark border-light text-white">
+<table class="table table-striped-alt bg-dark border-light text-white">
     <thead>
         <tr>
             <th>#</th>
@@ -407,7 +407,7 @@
 </table>
 
 <h2>Hover</h2>
-<table class="table table-hover-dark">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>#</th>
@@ -445,7 +445,7 @@
     </tfoot>
 </table>
 
-<table class="table table-hover-light bg-dark border-light text-white">
+<table class="table table-hover-alt bg-dark border-light text-white">
     <thead>
         <tr>
             <th>#</th>
@@ -484,7 +484,7 @@
 </table>
 
 <h2>Hover &amp; Striped</h2>
-<table class="table table-striped-dark table-hover-dark">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>#</th>
@@ -522,7 +522,7 @@
     </tfoot>
 </table>
 
-<table class="table table-striped-light table-hover-light bg-dark border-light text-white">
+<table class="table table-striped-alt table-hover-alt bg-dark border-light text-white">
     <thead>
         <tr>
             <th>#</th>
@@ -732,6 +732,78 @@
     </tfoot>
 </table>
 
+<h2>Contextual Colors</h2>
+<table class="table table-bordered">
+    <tbody>
+        <tr>
+            <th scope="row">Default</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-active">
+            <th scope="row">Active</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-primary">
+            <th scope="row">Primary</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-secondary">
+            <th scope="row">Secondary</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-success">
+            <th scope="row">Success</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-info">
+            <th scope="row">Info</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-warning">
+            <th scope="row">Warning</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-danger">
+            <th scope="row">Danger</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-light">
+            <th scope="row">Light</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-dark">
+            <th scope="row">Dark</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+    </tbody>
+</table>
+
+<h2>Consolidate Color Test</h2>
+<table class="table table-bordered table-hover">
+    <tbody>
+        <tr>
+            <th scope="row">Default</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="context-bg-primary">
+            <th scope="row">Active</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+    </tbody>
+</table>
+
 <h2>Nested Table</h2>
 <table class="table">
     <tr>
@@ -766,6 +838,67 @@
     </tr>
 </table>
 
+<table class="table table-primary table-bordered border-primary table-striped">
+    <tbody><tr>
+        <td> 1 </td>
+        <td> 2 </td>
+    </tr>
+    <tr>
+        <td> 3 </td>
+        <td>
+            <table class="table table-warning border-warning">
+                <tbody><tr>
+                    <td>
+                        <table class="table">
+                            <tbody><tr>
+                                <td> 4 </td>
+                                <td> 5 </td>
+                            </tr>
+                            <tr>
+                                <td> 7 </td>
+                                <td> 8 </td>
+                            </tr>
+                        </tbody></table>
+                    </td>
+                    <td> 6 </td>
+                    </tr>
+                <tr>
+                    <td> 9 </td>
+                    <td> 10 </td>
+                </tr>
+            </tbody></table>
+        </td>
+    </tr>
+</tbody></table>
+
+<h2>Card Table</h2>
+<div class="card" style="max-width: 18rem;">
+    <table class="table table-divided">
+        <thead>
+            <tr>
+                <th scope="col">Header</th>
+                <th scope="col">Header</th>
+                <th scope="col">Header</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+            </tr>
+            <tr>
+                <td colspan="2">Spanned Cell</td>
+                <td>Cell</td>
+            </tr>
+            <tr>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 
 </div>
 
